added some divs and the navigation

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
 
-<h1>生肖</h1>
-<h2>Chinese Zodiac</h2>
+<div class="redbox">
+  <h1>生肖</h1>
+  <h2>Chinese Zodiac</h2>
+</div>
 
 <nav>
   <ol>
