added more divs and css styles

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
 
 <div class="redbox">
-  <h1>生肖</h1>
-  <h2>Chinese Zodiac</h2>
+  <h1 class="symbols">生肖</h1>
+  <h2 class="title">Chinese Zodiac</h2>
+  <img class="medallion" src="images/medallion.svg" alt="medallion">
 </div>
 
 <nav>
@@ -28,17 +29,29 @@
 
 <p>The Shēngxiào literally “birth likeness”, is a scheme and systematic plan of future action that relates each year to an animal and its reputed attributes according to a 12-year mathematical cycle and it remains popular in several East Asian countries including China, Vietnam, Korea, Japan, and Thailand.</p>
 
-<h1>Dragon</h1>
-<p>Magnanimous, stately, vigorous, strong, proud, noble, direct, dignified, passionate.</p>
+<div class="dragon">
+  <h1>Dragon</h1>
+  <p>Magnanimous, stately, vigorous, strong, proud, noble, direct, dignified, passionate.</p>
+</div>
 
-<h1>Goat</h1>
-<p>Gentle, softhearted, considerate, attractive, hardworking, persistent, thrift.</p>
+<div class="goat">
+  <h1>Goat</h1>
+  <p>Gentle, softhearted, considerate, attractive, hardworking, persistent, thrift.</p>
+</div>
 
-<h1>Rooster</h1>
-<p>Deep thinkers, honest, bright, communicative, ambitious, capable, warm-hearted.</p>
+<div class="rooster">
+  <h1>Rooster</h1>
+  <p>Deep thinkers, honest, bright, communicative, ambitious, capable, warm-hearted.</p>
+</div>
 
-<h1>Ox</h1>
-<p>Persistent, simple, honest, straightforward, industrious, patient, cautious.</p>
+<div class="ox">
+  <h1>Ox</h1>
+  <p>Persistent, simple, honest, straightforward, industrious, patient, cautious.</p>
+</div>
+
+<footer>
+  <p class="footer"><a href="#">Back to top</a></p>
+</footer>
 
 </body>
 </html>
