--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
   <meta charset="utf-8">
   <title>Project Two</title>
   <link href="css/main.css" rel="stylesheet">
-  <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-</head>
+  <link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'></head>
 <body>
 
 <div class="redbox">
+  <img class="medallion" src="images/medallion.svg" alt="medallion">
   <h1 class="symbols">生肖</h1>
   <h2 class="title">Chinese Zodiac</h2>
-  <img class="medallion" src="images/medallion.svg" alt="medallion">
 </div>
 
 <nav>
@@ -25,32 +24,43 @@
   </ol>
 </nav>
 
-<h1>Shēngxiào</h1>
+<div class="banner">
+<img class="banner-image" src="images/banner.jpg" alt="banner">
+<h1 class="banner-title">Shēngxiào</h1>
+</div>
 
-<p>The Shēngxiào literally “birth likeness”, is a scheme and systematic plan of future action that relates each year to an animal and its reputed attributes according to a 12-year mathematical cycle and it remains popular in several East Asian countries including China, Vietnam, Korea, Japan, and Thailand.</p>
+<p class="text">The Shēngxiào literally “birth likeness”, is a scheme and systematic plan of future action that relates each year to an animal and its reputed attributes according to a 12-year mathematical cycle and it remains popular in several East Asian countries including China, Vietnam, Korea, Japan, and Thailand.</p>
 
 <div class="dragon">
-  <h1>Dragon</h1>
-  <p>Magnanimous, stately, vigorous, strong, proud, noble, direct, dignified, passionate.</p>
+  <h1 class="dragon-title">Dragon</h1>
+  <img class="dragon-symbol" src="images/dragon-symbol.svg" alt="dragon symbol">
+  <img class="dragon-image" src="images/dragon.svg" alt="dragon">
+  <p class="dragon-text">Magnanimous, stately, vigorous, strong, proud, noble, direct, dignified, passionate.</p>
 </div>
 
 <div class="goat">
-  <h1>Goat</h1>
-  <p>Gentle, softhearted, considerate, attractive, hardworking, persistent, thrift.</p>
+  <h1 class="goat-title">Goat</h1>
+  <img class="goat-image" src="images/goat.svg" alt="goat">
+  <img class="goat-symbol" src="images/goat-symbol.svg" alt="goat symbol">
+  <p class="goat-text">Gentle, softhearted, considerate, attractive, hardworking, persistent, thrift.</p>
 </div>
 
 <div class="rooster">
-  <h1>Rooster</h1>
-  <p>Deep thinkers, honest, bright, communicative, ambitious, capable, warm-hearted.</p>
+  <h1 class="rooster-title">Rooster</h1>
+  <img class="rooster-symbol" src="images/rooster-symbol.svg" alt="rooster symbol">
+  <img class="rooster-image" src="images/rooster.svg" alt="rooster">
+  <p class="rooster-text">Deep thinkers, honest, bright, communicative, ambitious, capable, warm-hearted.</p>
 </div>
 
 <div class="ox">
-  <h1>Ox</h1>
-  <p>Persistent, simple, honest, straightforward, industrious, patient, cautious.</p>
+  <h1 class="ox-title">Ox</h1>
+  <img class="ox-image" src="images/ox.svg" alt="ox">
+  <img class="ox-symbol" src="images/ox-symbol.svg" alt="ox symbol">
+  <p class="ox-text">Persistent, simple, honest, straightforward, industrious, patient, cautious.</p>
 </div>
 
 <footer>
-  <p class="footer"><a href="#">Back to top</a></p>
+  <p class="footer">Back to top</p>
 </footer>
 
 </body>
